Use Maven, upgrade to Java 21